--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongodb" : "",
     "mysql" : "",
     "mongoose" : "",
-    "mustache" : ""
+    "mustache" : "",
+    "connect" : ""
   }
 }
